[tool.poetry]
name = "circle-drawer"
version = "0.1.0"
description = ""
authors = ["XyzzyZ4p <xyzzyzap@gmail.com>"]
readme = "README.md"
packages = [{include = "circle_drawer"}]

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
